kubernetes/workloads/apps/synergyflow/namespace.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: synergyflow
  labels:
    app.kubernetes.io/name: synergyflow
    app.kubernetes.io/component: application
    cluster: apps
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
