kubernetes/workloads/apps/synergyflow/service.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
apiVersion: v1
kind: Service
metadata:
  name: synergyflow-backend
  namespace: synergyflow
  labels:
    app.kubernetes.io/name: synergyflow
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: synergyflow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: synergyflow
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
